| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-03-09  Maintenance Bug         Fixed #205 - Daily limited campaigns used all time impressions delivered
                                    instead of "today's" impressions delivered when calculating how many
                                    impressions to deliver for the rest of "today" (Andrew)
2007-03-01  Delivery    Feature     Fixed #35 - Port Google Adsense click tracking to Openads 2.3 (Matteo)
2007-02-27  Admin       Bug         Fixed #134 - Adding new zone breaks when you navigate to another tab
                                    (Marek)
2007-02-27  Maintenance Bug         Fixed #124 - Zone Impression Forcasting randomly creates NULL entries
                                    (Marek)
2007-02-23  Delivery    Bug         Fixed #173 - Delivery unit tests failing in adRender.php (Matteo)
2007-02-19  Delivery    Bug         Fixed #23 - Tandem Ads not working with javascript invocation, context
                                    parameter don't get "in" (Marek)
2007-02-19  Admin       Bug         Fixed #142 - Admin DAL has reference to a plugin (Marek)
2007-02-19  Admin       Bug         Fixed #137 - Cannot expand conversion details on statistics-conversion
                                    page (Marek)
2007-02-19  General     Feature     Fixed #128 - Allow FTP using PASV (Marek)
2007-02-19  Delivery    Bug         Fixed #162 - Iframe refresh broken in single host enviroments (Chris)
2007-02-12  Admin       Bug         Fixed #127 - Rebuild Banner Cache doesn't honor autohtml setting (Marek)
2007-02-12  DAL         Feature     Fixed #10 - phpAds_sqldie error in /lib/max/Dal/Common (Marek)